core/codegen/tests/ui-fail-stable/typed-uri-bad-type.stderr
error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::Path, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:45:23
   |
45 |     uri!(simple: id = "hi");
   |                       ^^^^ the trait `FromUriParam<rocket::http::uri::Path, &str>` is not implemented for `usize`
   |
   = help: the following implementations were found:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::Path, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:47:18
   |
47 |     uri!(simple: "hello");
   |                  ^^^^^^^ the trait `FromUriParam<rocket::http::uri::Path, &str>` is not implemented for `usize`
   |
   = help: the following implementations were found:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::Path, i64>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:49:23
   |
49 |     uri!(simple: id = 239239i64);
   |                       ^^^^^^^^^ the trait `FromUriParam<rocket::http::uri::Path, i64>` is not implemented for `usize`
   |
   = help: the following implementations were found:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::Path, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:51:31
   |
51 |     uri!(not_uri_display: 10, S);
   |                               ^ the trait `FromUriParam<rocket::http::uri::Path, _>` is not implemented for `S`
   |
   = note: required by `from_uri_param`

error[E0277]: the trait bound `i32: FromUriParam<rocket::http::uri::Path, std::option::Option<{integer}>>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:56:26
   |
56 |     uri!(optionals: id = Some(10), name = Ok("bob".into()));
   |                          ^^^^ the trait `FromUriParam<rocket::http::uri::Path, std::option::Option<{integer}>>` is not implemented for `i32`
   |
   = help: the following implementations were found:
             <i32 as FromUriParam<P, &'x i32>>
             <i32 as FromUriParam<P, &'x mut i32>>
             <i32 as FromUriParam<P, i32>>
   = note: required because of the requirements on the impl of `FromUriParam<rocket::http::uri::Path, std::option::Option<{integer}>>` for `std::option::Option<i32>`
   = note: required by `from_uri_param`

error[E0277]: the trait bound `std::string::String: FromUriParam<rocket::http::uri::Path, std::result::Result<_, _>>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:56:43
   |
56 |     uri!(optionals: id = Some(10), name = Ok("bob".into()));
   |                                           ^^ the trait `FromUriParam<rocket::http::uri::Path, std::result::Result<_, _>>` is not implemented for `std::string::String`
   |
   = help: the following implementations were found:
             <std::string::String as FromUriParam<P, &'a str>>
             <std::string::String as FromUriParam<P, &'x &'a str>>
             <std::string::String as FromUriParam<P, &'x mut &'a str>>
             <std::string::String as FromUriParam<P, &'x mut std::string::String>>
           and 2 others
   = note: required because of the requirements on the impl of `FromUriParam<rocket::http::uri::Path, std::result::Result<_, _>>` for `std::result::Result<std::string::String, &str>`
   = note: required by `from_uri_param`

error[E0277]: the trait bound `isize: FromUriParam<Query, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:58:20
   |
58 |     uri!(simple_q: "hi");
   |                    ^^^^ the trait `FromUriParam<Query, &str>` is not implemented for `isize`
   |
   = help: the following implementations were found:
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <isize as FromUriParam<P, isize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `isize: FromUriParam<Query, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:60:25
   |
60 |     uri!(simple_q: id = "hi");
   |                         ^^^^ the trait `FromUriParam<Query, &str>` is not implemented for `isize`
   |
   = help: the following implementations were found:
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <isize as FromUriParam<P, isize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `S: FromUriParam<Query, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:62:24
   |
62 |     uri!(other_q: 100, S);
   |                        ^ the trait `FromUriParam<Query, _>` is not implemented for `S`
   |
   = note: required by `from_uri_param`

error[E0277]: the trait bound `S: FromUriParam<Query, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:64:26
   |
64 |     uri!(other_q: rest = S, id = 100);
   |                          ^ the trait `FromUriParam<Query, _>` is not implemented for `S`
   |
   = note: required by `from_uri_param`

error[E0277]: the trait bound `S: Ignorable<Query>` is not satisfied
   --> $DIR/typed-uri-bad-type.rs:66:26
    |
66  |     uri!(other_q: rest = _, id = 100);
    |                          ^ the trait `Ignorable<Query>` is not implemented for `S`
    |
   ::: $WORKSPACE/core/http/src/uri/uri_display.rs
    |
    | pub fn assert_ignorable<P: UriPart, T: Ignorable<P>>() {  }
    |                                        ------------ required by this bound in `assert_ignorable`

error[E0277]: the trait bound `usize: Ignorable<Query>` is not satisfied
   --> $DIR/typed-uri-bad-type.rs:68:34
    |
68  |     uri!(other_q: rest = S, id = _);
    |                                  ^ the trait `Ignorable<Query>` is not implemented for `usize`
    |
   ::: $WORKSPACE/core/http/src/uri/uri_display.rs
    |
    | pub fn assert_ignorable<P: UriPart, T: Ignorable<P>>() {  }
    |                                        ------------ required by this bound in `assert_ignorable`

error[E0277]: the trait bound `S: FromUriParam<Query, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:68:26
   |
68 |     uri!(other_q: rest = S, id = _);
   |                          ^ the trait `FromUriParam<Query, _>` is not implemented for `S`
   |
   = note: required by `from_uri_param`
